# rust_blog

./: .gitignore  README.md
project_backend/: Cargo.toml
project_backend/migrations/2024-01-04-134428_auth_user/: up.sql
project_backend/migrations/2024-01-04-201945_auth_user_session_token/: down.sql  up.sql
project_backend/src/: a_login.rs  a_logout.rs  a_redefine_password.rs  a_register.rs  authentication.rs  functions.rs  lib.rs  main.rs  models.rs  schema.rs
project_frontend/: Cargo.toml
