[package]
name = "project_bakcend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
uuid = {version = "1", features = ["v4","fast-rng",]}
diesel = { version = "2.1.0", features = ["postgres", "uuid"] }
dotenvy = "0.15"
ring = "0.17"
regex = "1.5"